--- a/clase-2/Clase2.IntroMVC/Clase2.IntroMvc.Logica/Clase2.IntroMvc.Logica.csproj
+++ b/clase-2/Clase2.IntroMVC/Clase2.IntroMvc.Logica/Clase2.IntroMvc.Logica.csproj
@@ -1,18 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Clase2.IntroMVC.Entidades\Clase2.IntroMVC.Entidades.csproj" />
-    <ProjectReference Include="..\Clase2.IntroMvc.Logica\Clase2.IntroMvc.Logica.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
