agregando api de armas y peronajes, junto con collection de postman y tarea en README.md

--- a/clase-4/Clase4.POO/Clase4.POO.WebApi/Clase4.POO.WebApi.csproj
+++ b/clase-4/Clase4.POO/Clase4.POO.WebApi/Clase4.POO.WebApi.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Clase4.POO.Logica\Clase4.POO.Logica.csproj" />
+  </ItemGroup>
+
 </Project>
