agregando vista CalcularAreaRectangulo y validaciones

--- a/clase-5/Clase5.Modelo1erParcial/Clase5.Modelo1erParcial.Web/Clase5.Modelo1erParcial.Web.csproj
+++ b/clase-5/Clase5.Modelo1erParcial/Clase5.Modelo1erParcial.Web/Clase5.Modelo1erParcial.Web.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Clase5.Modelo1erParcial.Logica\Clase5.Modelo1erParcial.Logica.csproj" />
+  </ItemGroup>
+
 </Project>
